14-05-security-network/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: prod
spec:
  podSelector: {nginx-curl-1, nginx-curl-2}
  policyTypes:
  - Egress
