14-05-security-network/network-policy-1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-1
  namespace: prod
spec:
  podSelector: {nginx-curl-1}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.233.103.65/32
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 192.168.0.0/16
        - 172.16.0.0/20
