14-05-security-network/network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-2
  namespace: prod
spec:
  podSelector: {nginx-curl-2}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.233.103.64/32
